--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,42 @@ android {
 }
 
 dependencies {
+    def appcompat_version = "1.1.0"
+    def appcompat_version_exif = "1.0.0"
+    def constraintlayout_version = "1.1.3"
+    def materialdesign_version = "1.2.0-alpha01"
+    def gson_version = "2.8.5"
+    def kotlincoroutines_android_version = "1.2.1"
+    def kotlincoroutines_core_version = "1.2.1"
+    def easypermissions_version = "2.0.1"
+    def cameraview_version = "2.0.0-rc1"
+    def lifecycle_version = "2.2.0-alpha02"
+    def playservices_version = "17.0.0"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // Android
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.core:core-ktx:$appcompat_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlincoroutines_android_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlincoroutines_core_version"
+
+    // Google
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.google.android.material:material:$materialdesign_version"
+
+    // EasyPermissions
+    implementation "pub.devrel:easypermissions:$easypermissions_version"
+
+    // CameraView
+    api "com.otaliastudios:cameraview:$cameraview_version"
+    implementation "androidx.exifinterface:exifinterface:$appcompat_version_exif"
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "com.google.android.gms:play-services-tasks:$playservices_version"
 
     testImplementation 'junit:junit:4.12'
 
