--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,15 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-feature android:name="android.hardware.camera.any" android:required="true" />
+
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="true"
+        android:anyDensity="true" />
+
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -13,6 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true"
         tools:replace="android:allowBackup">
 
         <provider
@@ -26,6 +36,8 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
+        <service android:name="com.tan.myimagetrimmer.service.OnClearFromRecentService" android:stopWithTask="false" />
 
         <activity
             android:name=".ActivitySplash"
@@ -41,9 +53,13 @@
             android:screenOrientation="portrait"
             android:theme="@style/FullscreenTheme">
         </activity>
-<!--        <activity-->
-<!--            android:name=".TrimActivity"-->
-<!--            android:screenOrientation="portrait">-->
-<!--        </activity>-->
+        <activity
+            android:name=".ActivityTrimView"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullscreenTheme" />
+        <activity
+            android:name=".ActivityCameraView"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullscreenTheme" />
     </application>
 </manifest>
